--- a/src/pages/code-of-conduct.astro
+++ b/src/pages/code-of-conduct.astro
@@ -6,13 +6,13 @@ const config = await loadConfig();
 const { codeOfConductMain, codeOfConductSecondary } = config;
 ---
 
-<Layout isStaticHeader={true}>
-  <section class="bg-white text-gray-600 text-md py-16">
+<Layout>
+  <section class="bg-white text-gray-600 text-md py-40">
     <div class="container max-w-4xl mx-auto px-4">
       <!-- Section Header -->
       <div class="mb-12">
         <h1 class="text-4xl mb-8 text-brand-dark font-bold">
-          .NET MAUI Day Code of Conduct
+          MAUI Day Code of Conduct
         </h1>
         <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">Our pledge</h2>
         <p class="mt-4">
