--- a/src/pages/gallery/[album].astro
+++ b/src/pages/gallery/[album].astro
@@ -21,8 +21,8 @@ const formattedDate = new Date(date).toLocaleDateString("en-US", {
 });
 ---
 
-<Layout isStaticHeader={true} pageTitle={`${title} | Gallery | .NET MAUI Day`}>
-  <section class="bg-brand-dark py-24">
+<Layout pageTitle={`${title} | Gallery | MAUI Day`}>
+  <section class="bg-brand-dark py-40">
     <div class="container max-w-5xl mx-auto px-4">
       <div class="mb-8">
         <a href="/gallery" class="text-brand-extra hover:underline text-sm font-bold">
