--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -7,7 +7,7 @@
     <!-- Image Column -->
     <div class="w-full md:w-1/2 mb-8 md:mb-0">
       <img
-        src={`/images/people.png`} 
+        src={`/images/people.webp`} 
         alt="Event attendees"
         class="w-full h-auto"
       />
@@ -23,13 +23,14 @@
         The Only Conference Dedicated to .NET MAUI
       </h2>
       <p class="text-gray-700 text-md text-base mb-8">
-        .NET MAUI Day is a vibrant, one-day event dedicated to exploring the power of .NET Multi-platform App UI (.NET MAUI). Join us as we dive into the latest tools, techniques, and trends for building native, cross-platform applications with .NET. Whether you're a seasoned developer or just starting your journey, MauiDay offers inspiring talks, expert-led sessions, and networking opportunities to help you level up your skills and connect with the community.
+        MAUI Day is a vibrant, one-day event dedicated to exploring the power of .NET Multi-platform App UI (.NET MAUI). Join us as we dive into the latest tools, techniques, and trends for building native, cross-platform applications with .NET. Whether you're a seasoned developer or just starting your journey, MAUI Day offers inspiring talks, expert-led sessions, and networking opportunities to help you level up your skills and connect with the community.
       </p>
       <a
         href="/code-of-conduct"
-        class="border font-bold border-brand-extra text-brand-extra px-6 py-3 rounded-full text-md hover:bg-brand-extra hover:text-white transition"
+        class="px-8 py-4 rounded-full font-bold hover:bg-brand-extra hover:text-white text-brand-extra border-2 border-brand-extra transition-all duration-300 inline-flex flex-row items-center gap-2"
       >
-        Read our Code of Conduct
+        <svg xmlns="http://www.w3.org/2000/svg" class="size-6" viewBox="0 0 24 24"><path fill="currentColor" d="M2.828 4.328C5.26 1.896 9.5 1.881 11.935 4.317q.036.036.067.076c1.391-1.078 2.993-1.886 4.777-1.89a6.22 6.22 0 0 1 4.424 1.825c.559.56 1.023 1.165 1.34 1.922s.47 1.617.468 2.663c0 2.972-2.047 5.808-4.269 8.074c-2.098 2.14-4.507 3.924-5.974 5.009l-.311.23a.75.75 0 0 1-.897 0l-.312-.23c-1.466-1.085-3.875-2.869-5.973-5.009c-2.22-2.263-4.264-5.095-4.27-8.063a6.22 6.22 0 0 1 1.823-4.596m8.033 1.042c-1.846-1.834-5.124-1.823-6.969.022a4.7 4.7 0 0 0-1.382 3.52c0 2.332 1.65 4.79 3.839 7.022c1.947 1.986 4.184 3.66 5.66 4.752a78 78 0 0 0 2.159-1.645l-2.14-1.974a.752.752 0 0 1 1.02-1.106l2.295 2.118c.616-.52 1.242-1.08 1.85-1.672l-2.16-1.992a.753.753 0 0 1 1.021-1.106l2.188 2.02a19 19 0 0 0 1.528-1.877l-.585-.586l-1.651-1.652c-1.078-1.074-2.837-1.055-3.935.043c-.379.38-.76.758-1.132 1.126c-1.14 1.124-2.96 1.077-4.07-.043q-.733-.742-1.475-1.482a.75.75 0 0 1-.04-1.019q.351-.416.745-.893c.928-1.12 2.023-2.442 3.234-3.576m9.725 6.77c.579-1.08.92-2.167.92-3.228c.002-.899-.128-1.552-.35-2.08c-.22-.526-.551-.974-1.017-1.44a4.7 4.7 0 0 0-3.356-1.384c-1.66.004-3.25.951-4.77 2.346c-1.18 1.084-2.233 2.353-3.188 3.506l-.351.423q.497.498.993.998a1.375 1.375 0 0 0 1.943.03c.37-.365.748-.74 1.125-1.118c1.662-1.663 4.373-1.726 6.06-.045c.56.558 1.12 1.12 1.658 1.658Z"/></svg>
+        <span>Read our Code of Conduct</span>
       </a>
     </div>
   </div>
