--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -42,13 +42,13 @@ const regularSponsors = sponsors.filter(s => !s.boost);
     </div>
 
     <!-- Regular Sponsors -->
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 justify-center place-items-center mt-8">
+    <div class="flex flex-wrap justify-center gap-6 mt-8">
       {regularSponsors.map((sponsor) => (
         <a
           href={sponsor.url}
           target="_blank"
           rel="noopener noreferrer"
-          class="flex flex-col items-center p-4 transition-transform opacity-70 transform hover:scale-105 hover:opacity-100 w-full"
+          class="flex flex-col items-center p-4 transition-transform opacity-70 transform hover:scale-105 hover:opacity-100 w-full sm:w-[calc(33.333%-1rem)]"
         >
           <img
             src={`/images/sponsors/${sponsor.logo}.png`}
@@ -59,5 +59,12 @@ const regularSponsors = sponsors.filter(s => !s.boost);
         </a>
       ))}
     </div>
+    
+    <!-- <div class="text-center mt-20">
+      <a class="text-slate-500 hover:text-purple-600 text-sm font-medium transition-colors border-b border-transparent inline-flex gap-2 items-center justify-center hover:border-purple-600 pb-0.5" href="#">
+        <span>Interested in sponsoring? Contact us</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="size-4" viewBox="0 0 16 16"><path fill="currentColor" d="M1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25v-8.5C0 2.784.784 2 1.75 2M1.5 12.251c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V5.809L8.38 9.397a.75.75 0 0 1-.76 0L1.5 5.809zm13-8.181v-.32a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25v.32L8 7.88Z"/></svg>
+      </a>
+    </div> -->
   </div>
 </section>
