--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -17,19 +17,19 @@ const eventsWithThumbs = events.map((event) => {
 });
 ---
 
-<Layout isStaticHeader={true} pageTitle="Archive | .NET MAUI Day">
-  <section class="bg-brand-dark py-24">
+<Layout pageTitle="Archive | MAUI Day">
+  <section class="bg-brand-dark py-40">
     <div class="container max-w-5xl mx-auto px-4 text-center">
       <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">Looking Back</p>
       <h2 class="text-white text-4xl uppercase font-header font-bold mb-4">Event Archive</h2>
       <p class="text-white text-base text-md mb-12">
-        Browse past .NET MAUI Day and XamExpertDay events.
+        Browse past MAUI Day and XamExpertDay events.
       </p>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
         {eventsWithThumbs.map((event) => (
           <a href={`/archive/${event.id}`} class="group block">
-            <div class="overflow-hidden rounded-lg shadow-md aspect-[4/3] bg-brand-dark border border-white/10">
+            <div class="overflow-hidden rounded-3xl shadow-md aspect-[4/3] bg-brand-dark border border-white/10">
               {event.thumbnail !== '/images/default.png' ? (
                 <img
                   src={event.thumbnail}
