--- a/src/components/newsletter.astro
+++ b/src/components/newsletter.astro
@@ -72,19 +72,19 @@
     <form
       method="post"
       action="https://sendfox.com/form/m79vql/m8lj22"
-      class="sendfox-form max-w-md mx-auto text-left relative"
+      class="sendfox-form max-w-md mx-auto text-left"
       id="m8lj22"
       data-async="true"
       data-recaptcha="true"
     >
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
         <div>
-          <label for="sendfox_form_name" class="block text-sm font-medium text-white mb-1">
+          <label for="sendfox_form_first_name" class="block text-sm font-medium text-white mb-1">
             First Name
           </label>
           <input
             type="text"
-            id="sendfox_form_name"
+            id="sendfox_form_first_name"
             placeholder="First Name"
             name="first_name"
             required
@@ -120,7 +120,7 @@
       </div>
 
       <!-- no botz please -->
-      <div class="absolute left-[-5000px]" aria-hidden="true">
+      <div style="position: absolute; left: -5000px;" aria-hidden="true">
         <input type="text" name="a_password" tabindex="-1" value="" autocomplete="off" />
       </div>
 
