--- a/src/components/newsletter.astro
+++ b/src/components/newsletter.astro
@@ -79,12 +79,12 @@
     >
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
         <div>
-          <label for="sendfox_form_first_name" class="block text-sm font-medium text-white mb-1">
+          <label for="sendfox_form_name" class="block text-sm font-medium text-white mb-1">
             First Name
           </label>
           <input
             type="text"
-            id="sendfox_form_first_name"
+            id="sendfox_form_name"
             placeholder="First Name"
             name="first_name"
             required
