--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -87,7 +87,7 @@ const { ticketUrl, headline, hasCfs, badge } = config;
       latest and greatest in the .NET MAUI ecosystem, as well as being in the
       “hallway track” so you can talk to them, discuss and ask questions.
     </p>
-    <div class="flex space-x-4">
+    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
 
       <a href={`${ticketUrl}`}
         target="_blank"
