--- a/src/components/location.astro
+++ b/src/components/location.astro
@@ -11,7 +11,7 @@ const { location, locationNote, locationAddress, mapsLinkUrl, locationParking, l
   <div class="container max-w-4xl mx-auto">
 <div class="grid grid-cols-1 lg:grid-cols-5 gap-12 lg:gap-20 items-center">
 <!-- Left Column: Content -->
-<div class="lg:col-span-2 space-y-8 animate-fade-in-up">
+<div class="lg:col-span-2 space-y-8 animate-fade-in-up px-4 lg:px-0">
 <!-- Header Group -->
 <div class="space-y-2">
  <p
@@ -80,7 +80,7 @@ const { location, locationNote, locationAddress, mapsLinkUrl, locationParking, l
 </div>
 </div>
 <!-- Right Column: Map -->
-<div class="lg:col-span-3 relative h-[500px] lg:h-[600px] w-full rounded-2xl overflow-hidden shadow-2xl bg-gray-100 border border-gray-200 group">
+<div class="lg:col-span-3 relative h-[500px] lg:h-[600px] w-full rounded-none lg:rounded-2xl overflow-hidden shadow-none lg:shadow-2xl bg-gray-100 border-0 lg:border lg:border-gray-200 group">
  <iframe
       src={mapsEmbedUrl}
       width="100%"
